--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HowlPress – Video Compressor</title>
+  <title>Youtube Tools – Video Compressor</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
-    <h1>🐺 HowlPress</h1>
+    <h1>Youtube Tools</h1>
     <p>Compress your videos right in the browser — no upload needed!</p>
 
     <input type="file" id="fileInput" accept="video/*" />
