--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <a id="downloadLink" download="compressed.mp4">Download</a>
   </main>
 
-  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.10/dist/ffmpeg.min.js"></script>
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.10/dist/ffmpeg.min.js"></script>
+<script>
+  const FFmpegWASM = FFmpeg;
+</script>
 </body>
 </html>
